--- a/brewary.html
+++ b/brewary.html
@@ -193,9 +193,9 @@
 								                     <h3><br><br>MAIN TAKEAWAYS</h3><br>
 								                   </div>
 																	 <div class="col-lg-12 col-md-12 col-sm-12">
-															 				<p>1.</p>
-																			<p>2.</p>
-								                   <p>3.</p>
+															 				<p>1.To </p>
+																			<p>2. Be</p>
+								                   <p>3. Continued</p>
 								                   <p>4.</li>
 								                   </div>
 								               </div>
