--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 <div class="content iso-box arvr col-lg-4 col-md-6 col-sm-6 col-xs-12" id="eighth" onclick="location.href='garden.html'">
  <a href="brewary.html" ><img src="images/brewery.png" alt="Veg Out"></a>
  <!-- <div class="selectedprojects-des"> -->
-<h2>Garden</h2>
+<h2>brewARy</h2>
 <h4>Course Project | AR Design</h4>
 </div>
 <div class="design content iso-box col-lg-4 col-md-6 col-sm-6 col-xs-12" id="fifth" onclick="location.href='gintern.html'">
