--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 						<span class="icon icon-bar"></span>
 						<span class="icon icon-bar"></span>
 					</button>
-					<a href="index.html" class="navbar-brand">민진
+					<a href="index.html" class="navbar-brand">Michelle Kim
 	</a>
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar">
@@ -84,21 +84,28 @@
 	<section id="about">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2>Why do I design?</h2>
-				<p>I design because like myself, design is inherently optimistic. I believe progress, even in large and intractable challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then can successfully zero in on what is the most desirable, feasible, and viable for the people + company I am designing for. If done thoughtfully, design has the power to improve people's lives in both big and small ways.</p>
+				<h3>Why do I design?</h3>
+				<p style="padding-bottom:2em; line-height: 3rem">I design because like myself, design is inherently optimistic. I believe progress, even in seemingly-impossible challenges, is possible with the right design process. I am a dynamic problem solver who is able to open up to vast creative possibilities but then successfully zeroes in on what is the most desirable and viable for the people + company I am designing for. I design because thoughtful design can improve the human experience.</p>
+</div></div></section>
 
-<h2>My public engagements</h2>
+<section id="about">
+	<div class="row">
 
-<p>1. I spoke at the 2019 Drupal Conference about the importance of eliminating dark UX patterns from design.<br>
-	 2. I published an article on the UX Collective, "Can Blind People Use Tinder?" <p>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<h4>PUBLIC ENGAGEMENTS</h4>
+<p style="line-height: 3rem">➡️2019 Drupal Chicago Conference Speaker <br>
+	 ➡️Published on the UX Collective, "Can Blind People Use Tinder?" <p>
 
+</div>
 
-	 <h2>Currently on my agenda</h2>
-	 <p>1. Looking for full time product designer positions 👀<br>
+<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+	<h4>AGENDA</h4>
+<p style="line-height: 3rem">👀Looking for full-time product design positions <br>
+	✉️ Let's chat! <span style="font-weight:bold">minjin@umich.edu</bold>
 
-	2. Collaborating with a developer to ship a mobile app, "The Stalk Market." It's an app that will help people maximize profits from the turnip exchange on Animal Crossing... stay tuned 🤓</p>
+</div>
 
-					<h2>Let's chat!</h2>
+					<!-- <h2>Let's chat!</h2>
 <div>
 <a href="https://www.linkedin.com/in/mkimdesign/" target="_blank" class="w-inline-block">
 		<div class="contact-links">LINKEDIN</div>
@@ -106,7 +113,7 @@
 	<a href="mailto:minjin@umich.edu?subject=Hi%20Michelle" class="linkforfooter w-inline-block">
 		<div class="contact-links">EMAIL</div>
 	</a>
-</div>
+</div> -->
 </div>
 					</div>
 
