--- a/thrive.html
+++ b/thrive.html
@@ -26,11 +26,16 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/nivo-lightbox.css">
 	<link rel="stylesheet" href="css/nivo_themes/default/default.css">
-	<link rel="stylesheet" href="css/vegoutstyle.css">
+	<link rel="stylesheet" href="css/project.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Assistant:wght@700;800&family=Montserrat:wght@300;400;500;600;700&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
 <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@400;700&display=swap" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600;700;800&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,7 +46,7 @@
 				<span class="icon icon-bar"></span>
 				<span class="icon icon-bar"></span>
 			</button>
-			<!-- <a href="index.html" class="navbar-brand">Michelle Kim</a> -->
+			<a href="index.html" class="navbar-brand">back</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav navbar-right">
@@ -55,11 +60,11 @@
 
 
 	<section>
-		<div class="content-wrapper750">
+		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1 style="text-align:center;">Thrive</h1>
-					<h2 style="text-align:center; padding-bottom: 1.5em;">Helping people eat less meat</h2>
+<h2 style="text-align:center; padding-bottom: 1.5em;">Helping people eat less meat</h2>
 				</div>
 			</div>
 		</div>
@@ -70,7 +75,7 @@
 	</section>
 
 	<section>
-	<div class="contentblock content-wrapper750" style="padding-top: 3em;">
+	<div class="contentblock content-wrapper900" style="padding-top: 3em;">
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Role</p>
@@ -92,26 +97,21 @@
 		</div>
 	</section>
 
-<!-- <div><a href="https://kminjin.github.io/documents/vegout_flexport.pdf" class="deckbutton center">PDF Version</a></div> -->
-
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Introduction</h2>
+							<h4>Introduction</h4>
 						</div></div>
-						<div class="link">
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<h3>The Problem</h3>
-								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to explore ways to help people eat less meat.<br><br>
+								<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the <a href="https://www.cowspiracy.com/facts" style="color:#2E3542;">animal agriculture industry was the biggest contributor to climate change.</a> To address this issue, I decided to explore ways to help people eat less meat.<br><br>
 									How can I as a product designer, help people eat less meat? <br>
 									Who is my user group? <br>
 									What features are they looking for?
 
 								</p>
-
-						</div>
 					</div><br>
 
 </div>
@@ -138,10 +138,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">The Research</h2>
+				<h4>The Research</h4>
 </div></div>
 
 					<div class="row">
@@ -159,23 +159,17 @@
 
 </div>
 </div>
-			<!-- <div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<div style="background:#E0F0F6">
-								<img src="images/thriveaffinity.png" class="img-responsive">
-								<p class="caption">Affinity Diagram<br></p></div>
-</div>
-</div> -->
+
+
 
 	</div>
 	</div>	</div>
 </div>
 </section>
 
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<!-- <h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">The Research</h2> -->
 								<h3>Competitive Analysis Discovery</h3>
 
 						</div></div>
@@ -192,10 +186,10 @@
 </section>
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Discovering Design Opportunities</h2>
+							<h4>Discovering Design Opportunities</h4>
 								<h3>Personas</h3>
 
 						</div></div>
@@ -232,10 +226,9 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<!-- <h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Identifying Design Opportunities</h2> -->
 								<h3>Journey Maps</h3>
 
 						</div></div>
@@ -254,10 +247,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Ideation</h2>
+							<h4>Ideation</h4>
 							<h3>Product requirements</h3>
 
 						</div></div>
@@ -274,10 +267,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
+							<h4>Design</h4>
 								<h3>The Experience & User Flow</h3><br>
 									<p>After reviewing the product requirements, I decided my solution would be a mobile app due to its convenience for daily use. I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
  </p><br>
@@ -307,30 +300,12 @@
 	</div>
 </section>
 
-<!-- <section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Refining</h2>
-								<h3>Paper Prototype</h3>
-
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I then worked on paper prototypes to get quick feedback from users. Couple smaller features such as history viewing and goal setting were eliminated.
-								</p>
-								<img src="images/thrivepaper.png" class="img-responsive"><br>
-						</div>
-	</div>
-	</div>
-</section> -->
-
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design Decisions</h2>
+							<h4>Design Decisions</h4>
 								<h3>Wireframes and Feedback</h3>
 								<p>I created wireframes of the "Achievements" feature and ran A/B tests. The A/B tests helped me figure out what users preferred in terms of the ease of digesting the content, entering data, and visual appeal.<br><br>
 </p><br><br>
@@ -364,7 +339,7 @@
 </section>
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 								<h3>Design Decisions Continued</h3>
@@ -394,10 +369,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Visual Design</h2>
+							<h4>Visual Design</h4>
 								<h3>Style Guide</h3><br><br>
 
 						</div></div>
@@ -412,10 +387,10 @@
 </section>
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Solution</h2>
+							<h4>Solution</h4>
 								<h3>Final Solution</h3>
 								<!-- <p>Most notable change from the first and second prototype was how my weekly goal illustration was displayed in the Achievements screen. In the previous usability testing, users reported that they could not tell what stage of the goal they were in because there was just an image and a "plus" button which gave them no context. So for the second prototype, I included a day by day goal indicator.</p> -->
 								</div>
@@ -464,54 +439,7 @@
 	</div>
 </section>
 
-<!-- <section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design Changes</h2>
-								<h3>Iteration 1</h3>
 
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<img src="images/thrive1.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section> -->
-
-<!-- <section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
-								<h3>Iteration 2</h3>
-
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<img src="images/thrive2.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section> -->
-
-
-<!-- <section>
-<div class="contentblock content-wrapper750">
-		<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Design</h2>
-								<h3>Visual Identity</h3>
-
-						</div></div>
-						<div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<img src="images/thrivestyleguide.png" class="img-responsive">
-						</div>
-	</div>
-	</div>
-</section> -->
 
 
 <div class="progress-wrap">
@@ -524,10 +452,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<br><br><br><br><br><br><h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Reflection</h2>
+							<br><br><br><br><br><br><h4>Reflection</h4>
 								<h3>What I learned</h3>
 						</div></div>
 						<div class="row">
@@ -544,10 +472,10 @@
 
 
 <section>
-<div class="contentblock content-wrapper750">
+<div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h2 style="	font-family: 'Karla', sans-serif; font-size: 1.5em; font-weight: 700;">Reflection</h2>
+							<h4>Reflection</h4>
 								<h3>Where to Improve</h3>
 						</div></div>
 						<div class="row">
