--- a/thrivev2.html
+++ b/thrivev2.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>Thrive</h1>
 <h2>
-Thrive is a mobile app-based solution that helps people eat less meat.
+Thrive is a mobile app-based solution that helps people eat less meat
 
 </h2>
 				</div>
@@ -102,18 +102,27 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		</div>
 	</section>
 
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>context</h4>
+					<h3>I couldn't quit Chicken Chalupas from Taco Bell</h3>
+					<p>While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change. With this newfound knowledge, I decided to say goodbye to my meat-rich diet and embrace vegeterianism. However, I couldn't give up the love of my life- chicken chalupas, and hence, a new project emerged.
+
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 <section>
 	<div class="contentblock content-wrapper900">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>INTRODUCTION</h4>
-			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3>The Problem</h3>
-				<p>As an environmental advocate, I've always sought ways to help our planet. While watching an environmental documentary titled Cowspiracy, I unexpectedly learned that the animal agriculture industry was the biggest contributor to climate change.<br><br>
-				How can I as a product designer, help people eat less meat? <br>
-				Who is my target group? And what problems are they trying to solve?
-				</p>
+				<h4>The problem</h4>
+				<h3>Turns out, my mom wants to eat less meat too</h3>
+				<p>Over the last several years, there has been a continuous rise in vegeterian and vegan diets. I found others, like me, who also struggled to limit their meat-intake. <span style="font-weight:600;">I decided to explore, how I can, as a product designer, help people eat less meat. </span></p>
 			</div>
 		</div>
 	</div>
@@ -123,8 +132,9 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 	<div class="content-wrapper900">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h3>The Solution</h3>
-				<p>My solution was Thrive, an all-in-one mobile app that helps people eat less meat by providing them with positive encouragement, social support, and the tools they need to succeed.</p><br>
+				<h4>The solution</h4>
+				<h3>Make behavioral change rewarding, fun, and valuable</h3>
+				<p>My solution is Thrive, an all-in-one mobile app that helps people eat less meat by providing them with the positive encouragement, social support, and the tools needed to succeed.</p><br>
 			</div>
 		</div>
 	</div>
@@ -145,19 +155,16 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>The research - User Interviews
+				<h4>Interviews
 					</h4>
-</div></div>
-
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
 								<h3>People have different motivations but similar challenges</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>I opted for interviews over surveys because I wanted to explore people's narratives and the nuances of their individual experiences. Questions centered around identifying different <span style="font-weight:600;">motivations</span> behind veganism, <span style="font-weight:600;">struggles</span> vegans faced when maintaining their diet, and<span style="font-weight:600;"> obstacles </span>non-vegans inititally had to overcome.
+								<p>Designers design for others and so, it was time to learn from the people.
+									I opted for interviews over surveys because I needed to deeply explore people's narratives. From 10 semi-structured interviews, I identified the <span style="font-weight:600;">motivations</span> behind veganism, the <span style="font-weight:600;">struggles</span> vegans faced, and the<span style="font-weight:600;"> obstacles </span> for non-vegans.
 </p><br>
 <img src="images/thriveinterview.png" class="img-responsive"><br><br>
 
@@ -175,11 +182,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>The research - Competitive Analysis</h4>
-</div></div>
-
-					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				<h4>Competitive Analysis</h4>
 								<h3>Current products weren't solving the problem</h3>
 
 						</div></div>
@@ -200,40 +203,25 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<!-- <h4>Discovering Design Opportunities</h4> -->
-							<h4>The Synthesis - Personas</h4>
-			</div></div>
+							<h4>Personas</h4>
+											<h3>Who are the users?</h3>
+											</div></div>
+											<div class="row">
+												<br>
+															<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
-								<div class="row">
-									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-											<h3>Users want to be reminded of their positive impact</h3>
-								<p>I discovered that the target group can be encouraged in one same way. Regardless of their motivation, users wanted reminders about their positive impact resulting from having gone meat-free.
-								</p><br>
-								<div class="w3-content w3-display-container">
-
-<div class="w3-display-container mySlides">
-	<img src="images/thrivepersona2.png" style="width:100%">
-
+ <button class="button button1" onclick=" window.open('https://kminjin.github.io/documents/thrivepersonas.pdf','_blank')">View Personas</button>
 </div>
-
-<div class="w3-display-container mySlides">
-	<img src="images/thrivepersona1.png" style="width:100%">
-
-</div>
-
-<div class="w3-display-container mySlides">
-<img src="images/thrivepersona3.png" style="width:100%">
-
-</div>
+				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
 
-<button class="w3-button w3-display-left w3-black" onclick="plusDivs(-1)">&#10094;</button>
-<button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
+								<p> <span style= "font-weight:700;">1. The Proactive Mother</span><br>She no longer wants to support the industry responsible for 18% of all harmful gases. Her two sons both have asthma.</p>
+									<p><span style= "font-weight:700;">2. The Young Animal Activist</span><br> Beth works for PETA and she's been vegan since she was 15. The amount of animals she has saved thus far, motivate her.</p>
+										<p><span style= "font-weight:700;">3. The Health Conscious Athlete</span><br> Mark is a boxer who is weary of heart disease. He has a competitive spirit and would love to connect with others in a similar journey.</p>
 
-</div>
 
 									</div>	</div></div></div></div>
 </section>
-
 
 
 <section>
@@ -241,18 +229,23 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<!-- <h4>Discovering Design Opportunities</h4> -->
-							<h4>The Synthesis - journey maps</h4>
-			</div></div>
+							<h4>Journey Map</h4>
+											<h3>Solution needs to be a source for resources</h3>
+											</div></div>
+											<div class="row">
+												<br>
+															<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
-								<div class="row">
-									<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-											<h3>Users want a convenient, resourceful solution</h3>
-								<p>The <a target="_blank" href="https://kminjin.github.io/documents/thrivejourneymap.png">journey map</a> for my persona Julianne, further supported the existence of problems discovered in the interviews: <span style="font-weight:bold;">(1)</span> lack of experience with vegan recipes and<span style="font-weight:bold;"> (2)</span> inability to connect with people who are vegan.
+ <button class="button button1" onclick=" window.open('https://kminjin.github.io/documents/thrivejourneymap.png','_blank')">View Journey Map</button>
+</div>
+				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
 
+								<p>
+								The journey map for my persona Julianne <span style= "font-weight:700;">(The Proactive Mother)</span>, further supported the existence of two main problems discovered in the interviews and helped me identify design opportunities-</p>
+								<p>
+								<span style="font-weight:bold;">1.</span> Target group's lack of experience with vegan recipes <span style="font-weight:bold;"><br>2.</span> Inability to connect with others who are also trying to eat less meat
 								</p>
-									<!-- The journey maps reinforced the insights discovered during the interviews and helped me visualize the users' areas of frustration. -->
-		<br><img src="images/thrivejourneyquotes.png" class="img-responsive">
 						</div>
 	</div>
 	</div>
@@ -264,22 +257,48 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h4>Ideation </h4>
-							<h3 style="line-height: 1.5em;">My product will be motivating, convenient, & resourceful</h3>
+							<h3 style="line-height: 1.5em;">The more users turn to Thrive, the more effective it will be</h3>
 
 						</div></div>
 						<div class="row">
 							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating. I determined that the more the users turn to my solution, the more effective my solution will be.
-									<br><br>
-									<span style="font-weight:600;">1. Thrive needs to motivate</span><br>
-									Include weekly "meat-free day" goal and display metrics about users' positive impact on the world<br>
-								<span style="font-weight:600;">2. Thrive needs to be convenient</span><br>
-									Users should not experience a waiting time when they are inputting or expecting data<br>
-								<span style="font-weight:600;">3. Thrive needs to be resourceful</span><br>
-						To be useful, provide what users lack: (1) vegan recipes and (2) a platform where people can connect<br>
-								</p>
-								<!-- <img src="images/thrivediverging.png" class="img-responsive"> -->
+								<p>After understanding the needs of my target group, I generated a series of themes to consider while ideating: rewarding and enticing, resourceful but above all else, be convenient. Users should not experience a waiting time when they are inputting or expecting data </p>
+
+					<div class='parent'>
+						<p><div class='rectangle inline-block-child'></div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> Make it a <span style="font-weight:bold;">mobile app</span></span>
+						</p>
+					</div>
+					<p>All three personas were busy people on-the-move. Solution needed to be readily and easily accessible.</p>
+
+					<div class='parent'>
+						<p><div class='rectangle inline-block-child'></div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> How can Thrive <span style="font-weight:bold;">reward</span> its users?</span>
+						</p>
+					</div>
+					<p>Include weekly "meat-free day" goal and incorporate a gamified way of displaying progress. Gamification gives people quick feedback and allows them to see their performance level at a glance.</p>
+
+					<div class='parent'>
+						<p><div class='rectangle inline-block-child'></div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> How can Thrive <span style="font-weight:bold;">motivate</span> its users?</span>
+						</p>
+					</div>
+					<p>Interviewees consistently mentioned that it is hard to see the difference on the world even after having gone meat-free, so include concrete metrics about their positive impact.<p>
+
+						<div class='parent'>
+							<p><div class='rectangle inline-block-child'></div>
+								<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> What do Thrive users <span style="font-weight:bold;">need</span>?</span>
+							</p>
 						</div>
+						<p>Vegan recipes! People want to eat vegan meals besides PB & J.<p>
+
+							<div class='parent'>
+								<p><div class='rectangle inline-block-child'></div>
+									<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em"> What about <span style="font-weight:bold;">social support</span>?</span>
+								</p>
+							</div>
+							<p>Allow Thrive to be a platform where user can form groups with people who are all trying to eat less meat and engage in friendly competition through leaderboards.<p>
+</div>
 	</div>
 	</div>
 </section>
@@ -289,9 +308,9 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>content strategy - app hierarchy</h4>
+							<h4>content strategy</h4>
 								<h3>Seamless experience & user flow</h3><br>
-									<p>After reviewing the product requirements, I decided my solution would be a mobile app due to its convenience for daily use. I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
+									<p>After determining the final features, I created scenarios <span style="font-weight:bold;">(image 2)</span> detailing 3 key interactions between my app and its users. Then, I created a user flow to form the backbone of the app <span style="font-weight:bold;">(image 1)</span>.
  </p><br>
 
 								<div class="w3-content w3-display-container">
@@ -324,7 +343,7 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Design Decisions - A/B TESTS of wireframes</h4>
+							<h4>A/B TESTS of wireframes</h4>
 								<h3>When in doubt? Turn to users</h3>
 								<p>I created wireframes of the "Achievements" feature and ran A/B tests. The A/B tests helped me figure out what users preferred in terms of the ease of digesting the content, entering data, and visual appeal.<br><br>
 </p><br>
@@ -361,9 +380,9 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Design decisions - Iterating on feedback</h4>
+							<h4>Iterating on feedback</h4>
 								<h3>Bringing more clarity with every iteration </h3>
-								<p>I carefully considered the feedback received from potential users and a  senior designer I connected with on LinkedIn. With each iteration, the experience was simplified and improved.
+								<p>I received feedback from potential users and a senior designer I connected with on LinkedIn. With each iteration, the experience was simplified. Most notably, following existing design systems such as Google's material design guidelines and designing on a 8pt grid system helped the UI tremendously.
 </p><br>
 						</div></div>
 
@@ -386,31 +405,30 @@ Thrive is a mobile app-based solution that helps people eat less meat.
 	</div>
 </section>
 
-
 <section>
 <div class="contentblock content-wrapper900">
 		<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<h4>Visual Design</h4>
-								<h3>Being intentional with every design decision</h3>
-<p><a target="_blank" href="https://kminjin.github.io/images/thrivestyleguide.png">style guide</a><br><br>
+							<!-- <h4>Discovering Design Opportunities</h4> -->
+							<h4>Style Guide</h4>
+											<h3>Being intentional with every design decision</h3>
+											</div></div>
+											<div class="row">
+												<br>
+															<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
-<span style="font-weight:600;">1. Typography</span><br>
-	I wanted to work with a typeface that can be used for headers, body copy, and captions. I knew I wanted use a sans-serif to bring a modern, concise feel to the app. I decided to go with Source Sans Pro that works very well in UIs for its simplistic nature to enhance legibility.<br><br>
-	<span style="font-weight:600;">2. UI </span><br>Originally, I experimented with creating entirely new UI components but learned early on during testing that users weren't comfortable with my patterns. I ultimately turned to Google Design Material Guidelines for buttons (focused, enabled, FABs).<br><br>
+ <button class="button button1" onclick=" window.open('https://kminjin.github.io/images/thrivestyleguide.pdf','_blank')">View Style Guide</button>
+</div>
+				<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 
-	<span style="font-weight:600;">3. Color </span><br>I wanted my app to have a white background to make sure the content is easy to read but still be exciting so I opted for a <span style="color: #fd7660;">bright orange</span> for the most important action button and a <span style="color: #1b89b6;">complementary teal for other UI buttons.
+								<p> <span style= "font-weight:700;">1. Typography</span><br>I wanted to work with a typeface that can be used for headers, body copy, and captions. I went with the classic and accedssible Source Sans Pro for optimal legibility.</p>
+									<p><span style= "font-weight:700;">2. UI Buttons</span><br>Originally, I experimented with creating entirely new UI components but learned early on that users weren't comfortable with my patterns. I ultimately turned to Google Design Material Guidelines.</p>
+										<p><span style= "font-weight:700;">3. Color</span><br> I wanted my app to have a white background to make sure the content is easy to read. For the UI, I opted for a <span style="color: #fd7660; font-weight:600;">bright orange</span> for the most important action button and a <span style="color: #1b89b6;font-weight:600">complementary teal</span> for the rest.</p>
 
-						</div></div>
-						<!-- <div class="row">
-							<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-								<p>
-								</p>
-								<img src="images/thrivestyleguide.png" class="img-responsive">
-						</div>
-	</div> -->
-	</div>
+
+									</div>	</div></div></div></div>
 </section>
+
 
 
 
@@ -559,6 +577,14 @@ function showDivs(n) {
   }
   x[slideIndex-1].style.display = "block";
 }
+
+
+$('button').on('mousedown',
+    /** @param {!jQuery.Event} event */
+    function(event) {
+        event.preventDefault();
+    }
+);
 </script>
 
 
